--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-900 text-white min-h-screen">
   <header class="bg-gray-800 p-4">
     <div class="flex items-center justify-center">
-      <img src="chaton.png" alt="Logo Chaton" class="h-12 w-12 mr-2">
+      <img src="chaton.jpg" alt="Logo Chaton" class="h-12 w-12 mr-2">
       <h1 class="text-3xl font-bold">Dry.Coffee76</h1>
     </div>
     <nav class="mt-4">
