--- a/index.html
+++ b/index.html
@@ -14,35 +14,38 @@
     </div>
     <nav class="mt-4">
       <ul class="flex justify-center space-x-6">
-        <li><a href="#" class="hover:text-green-400">Accueil</a></li>
-        <li><a href="#" class="hover:text-green-400">Produits</a></li>
-        <li><a href="#" class="hover:text-green-400">Contact</a></li>
+        <li><a href="#" onclick="showProducts()" class="hover:text-green-400">Accueil</a></li>
+        <li><a href="#" onclick="showProducts()" class="hover:text-green-400">Produits</a></li>
+        <li><a href="https://dym168.org/dry_coffee76" class="hover:text-green-400">Contact</a></li>
+        <li><a href="#" onclick="showInformation()" class="hover:text-green-400">Information</a></li>
       </ul>
     </nav>
   </header>
 
   <main class="container mx-auto p-6">
     <!-- Section des produits -->
-    <section id="products" class="grid grid-cols-1 md:grid-cols-2 gap-6">
-      <!-- Produit 1 -->
+    <section id="products" class="grid grid-cols-1 md:grid-cols-3 gap-6">
+      <!-- Produit 1: Olivette -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
         <h2 class="text-xl font-semibold mt-4">🫒 Olivette Dry90U ⚡️</h2>
-        <video class="w-full h-48 object-cover rounded-md cursor-pointer" src="olive.mp4" alt="Olivette" controls onclick="showDescription()"></video>
+        <video class="w-full h-48 object-cover rounded-md cursor-pointer" src="olive.mp4" poster="olive_poster.jpg" alt="Olivette" controls onclick="showDescription('olivette')"></video>
       </div>
-      <!-- Produit 2 -->
+      <!-- Produit 2: Moon Velvet -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
-        <img src="https://via.placeholder.com/300x200" alt="Fleurs" class="w-full h-48 object-cover rounded-md">
-        <h2 class="text-xl font-semibold mt-4">Fleurs Amnesia</h2>
-        <p class="text-gray-400 mt-2">Fleurs bio, saveur Amnesia, sachet de 5g.</p>
-        <p class="text-green-400 font-bold mt-2">19,99 €</p>
-        <button class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md">Ajouter au panier</button>
+        <h2 class="text-xl font-semibold mt-4">🌳 Moon Velvet 🌳</h2>
+        <video class="w-full h-48 object-cover rounded-md cursor-pointer" src="moon.mp4" poster="moon_poster.jpg" alt="Moon Velvet" controls onclick="showDescription('moon')"></video>
+      </div>
+      <!-- Produit 3: Colombienne -->
+      <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
+        <h2 class="text-xl font-semibold mt-4">❄️ Colombienne 0,95% 🇨🇴</h2>
+        <video class="w-full h-48 object-cover rounded-md cursor-pointer" src="baida95.mp4" poster="baida95_poster.jpg" alt="Colombienne" controls onclick="showDescription('colombienne')"></video>
       </div>
     </section>
 
-    <!-- Section de description (cachée par défaut) -->
-    <section id="description" class="hidden bg-gray-800 rounded-lg p-4 shadow-lg">
+    <!-- Section de description pour Olivette (cachée par défaut) -->
+    <section id="description-olivette" class="hidden bg-gray-800 rounded-lg p-4 shadow-lg">
       <h2 class="text-xl font-semibold mt-4">🫒 Olivette Dry90U ⚡️</h2>
-      <video class="w-full h-48 object-cover rounded-md" src="olive.mp4" alt="Olivette" controls></video>
+      <video class="w-full h-48 object-cover rounded-md" src="olive.mp4" poster="olive_poster.jpg" alt="Olivette" controls></video>
       <p class="text-gray-400 mt-2">
         🫒 5G = 50€<br>
         🫒 10G = 90€<br>
@@ -54,6 +57,60 @@
       <a href="https://dym168.org/dry_coffee76" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
       <button onclick="showProducts()" class="mt-4 w-full bg-gray-600 hover:bg-gray-700 text-white py-2 rounded-md">Retour</button>
     </section>
+
+    <!-- Section de description pour Moon Velvet (cachée par défaut) -->
+    <section id="description-moon" class="hidden bg-gray-800 rounded-lg p-4 shadow-lg">
+      <h2 class="text-xl font-semibold mt-4">🌳 Moon Velvet 🌳</h2>
+      <video class="w-full h-48 object-cover rounded-md" src="moon.mp4" poster="moon_poster.jpg" alt="Moon Velvet" controls></video>
+      <p class="text-gray-400 mt-2">
+        🏆 Top Shelph 🏆<br>
+        5G = 50€<br>
+        10G = 80€<br>
+        20G = 160€<br>
+        25G = 190€<br>
+        <br>
+        🍨 Bon goût crémeux et une bonne odeur 👃<br>
+        <br>
+        👎 Pas beaucoup de stock 🛍️, dépêchez-vous les frérots 😉
+      </p>
+      <a href="https://dym168.org/dry_coffee76" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
+      <button onclick="showProducts()" class="mt-4 w-full bg-gray-600 hover:bg-gray-700 text-white py-2 rounded-md">Retour</button>
+    </section>
+
+    <!-- Section de description pour Colombienne (cachée par défaut) -->
+    <section id="description-colombienne" class="hidden bg-gray-800 rounded-lg p-4 shadow-lg">
+      <h2 class="text-xl font-semibold mt-4">❄️ Colombienne 0,95% 🇨🇴</h2>
+      <video class="w-full h-48 object-cover rounded-md" src="baida95.mp4" poster="baida95_poster.jpg" alt="Colombienne" controls></video>
+      <p class="text-gray-400 mt-2">
+        Qualité: ⭐️⭐️⭐️⭐️⭐️<br>
+        <br>
+        Prix 🏷️<br>
+        ❄️ 1G = 70€<br>
+        ❄️ 3G = 160€<br>
+        ❄️ 5G = 240€<br>
+        ❄️ 10G = 0,353 oz<br>
+        <br>
+        Description : elle a un bon parfum, très propre et elle pousse fort
+      </p>
+      <a href="https://dym168.org/dry_coffee76" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
+      <button onclick="showProducts()" class="mt-4 w-full bg-gray-600 hover:bg-gray-700 text-white py-2 rounded-md">Retour</button>
+    </section>
+
+    <!-- Section d'information (cachée par défaut) -->
+    <section id="information" class="hidden bg-gray-800 rounded-lg p-4 shadow-lg text-center">
+      <h2 class="text-xl font-semibold mt-4">À propos de Dry.Coffee76</h2>
+      <p class="text-gray-400 mt-2">
+        ✨ Bienvenue dans votre nouvelle boutique de petits produits de qualité à Rouen ! ✨<br><br>
+        Nous vous proposons une sélection de produits soigneusement choisis, alliant qualité, praticité et petits prix. Que ce soit pour vous faire plaisir ou pour offrir, chaque article est sélectionné avec attention.<br><br>
+        📍 Retrouvez-nous sur place à Rouen pour découvrir tous nos produits en direct.<br>
+        🚚 Livraison possible aux alentours de Rouen pour plus de confort – il vous suffit de nous contacter !<br><br>
+        ✅ Produits de qualité<br>
+        ✅ Service chaleureux<br>
+        ✅ Disponibilité rapide<br><br>
+        Suivez-nous pour ne rien rater des nouveautés et promotions !
+      </p>
+      <button onclick="showProducts()" class="mt-4 w-full bg-gray-600 hover:bg-gray-700 text-white py-2 rounded-md">Retour</button>
+    </section>
   </main>
 
   <footer class="bg-gray-800 p-4 text-center">
@@ -61,24 +118,30 @@
   </footer>
 
   <script>
-    // Fonction pour afficher la section de description et masquer les produits
-    function showDescription() {
+    // Fonction pour afficher la section de description correspondant au produit et masquer les autres sections
+    function showDescription(product) {
       document.getElementById('products').classList.add('hidden');
-      document.getElementById('description').classList.remove('hidden');
+      document.getElementById('information').classList.add('hidden');
+      document.getElementById(`description-${product}`).classList.remove('hidden');
     }
 
-    // Fonction pour afficher les produits et masquer la description
+    // Fonction pour afficher les produits et masquer toutes les autres sections
     function showProducts() {
-      document.getElementById('description').classList.add('hidden');
       document.getElementById('products').classList.remove('hidden');
+      document.getElementById('description-olivette').classList.add('hidden');
+      document.getElementById('description-moon').classList.add('hidden');
+      document.getElementById('description-colombienne').classList.add('hidden');
+      document.getElementById('information').classList.add('hidden');
     }
 
-    // Fonctionnalité de base pour les boutons "Ajouter au panier"
-    document.querySelectorAll('button:not([onclick])').forEach(button => {
-      button.addEventListener('click', () => {
-        alert('Produit ajouté au panier !');
-      });
-    });
+    // Fonction pour afficher la section d'information et masquer les autres sections
+    function showInformation() {
+      document.getElementById('products').classList.add('hidden');
+      document.getElementById('description-olivette').classList.add('hidden');
+      document.getElementById('description-moon').classList.add('hidden');
+      document.getElementById('description-colombienne').classList.add('hidden');
+      document.getElementById('information').classList.remove('hidden');
+    }
   </script>
 </body>
 </html>
