--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
       <!-- Produit 1: Olivette -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
         <h2 class="text-xl font-semibold mt-4">🫒 Olivette Dry90U ⚡️</h2>
-        <video class="w-full h-48 object-cover rounded-md cursor-pointer" src="olive.mp4" poster="olive_poster.jpg" alt="Olivette" controls onclick="showDescription('olivette')"></video>
+        <img src="olive_poster.jpg" alt="Olivette" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('olivette')">
       </div>
       <!-- Produit 2: Moon Velvet -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
         <h2 class="text-xl font-semibold mt-4">🌳 Moon Velvet 🌳</h2>
-        <video class="w-full h-48 object-cover rounded-md cursor-pointer" src="moon.mp4" poster="moon_poster.jpg" alt="Moon Velvet" controls onclick="showDescription('moon')"></video>
+        <img src="moon_poster.jpg" alt="Moon Velvet" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('moon')">
       </div>
       <!-- Produit 3: Colombienne -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
         <h2 class="text-xl font-semibold mt-4">❄️ Colombienne 0,95% 🇨🇴</h2>
-        <video class="w-full h-48 object-cover rounded-md cursor-pointer" src="baida95.mp4" poster="baida95_poster.jpg" alt="Colombienne" controls onclick="showDescription('colombienne')"></video>
+        <img src="baida95_poster.jpg" alt="Colombienne" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('colombienne')">
       </div>
     </section>
 
@@ -64,10 +64,10 @@
       <video class="w-full h-48 object-cover rounded-md" src="moon.mp4" poster="moon_poster.jpg" alt="Moon Velvet" controls></video>
       <p class="text-gray-400 mt-2">
         🏆 Top Shelph 🏆<br>
-        5G = 50€<br>
-        10G = 80€<br>
-        20G = 160€<br>
-        25G = 190€<br>
+        🌳5G = 50€<br>
+        🌳10G = 80€<br>
+        🌳20G = 160€<br>
+        🌳25G = 190€<br>
         <br>
         🍨 Bon goût crémeux et une bonne odeur 👃<br>
         <br>
@@ -88,7 +88,7 @@
         ❄️ 1G = 70€<br>
         ❄️ 3G = 160€<br>
         ❄️ 5G = 240€<br>
-        ❄️ 10G = 0,353 oz<br>
+        ❄️ 10G = 410€<br>
         <br>
         Description : elle a un bon parfum, très propre et elle pousse fort
       </p>
