--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     <!-- Section de description pour Moon Velvet (cachée par défaut) -->
     <section id="description-moon" class="hidden bg-gray-800 rounded-lg p-4 shadow-lg">
       <h2 class="text-xl font-semibold mt-4">🌳 Moon Velvet 🌳</h2>
-      <video class="w-full h-48 object-cover rounded-md" src="moon.mp4" poster="moon.jpg" alt="Moon Velvet" controls></video>
+      <video class="w-full h-48 object-cover rounded-md" src="moon.mp4" poster="moon.JPG" alt="Moon Velvet" controls></video>
       <p class="text-gray-400 mt-2">
         🏆 Top Shelph 🏆<br>
-        5G = 50€<br>
-        10G = 80€<br>
-        20G = 160€<br>
-        25G = 190€<br>
+        🌳5G = 50€<br>
+        🌳10G = 80€<br>
+        🌳20G = 160€<br>
+        🌳25G = 190€<br>
         <br>
         🍨 Bon goût crémeux et une bonne odeur 👃<br>
         <br>
