--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Produit 2: Moon Velvet -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
         <h2 class="text-xl font-semibold mt-4">🌳 Moon Velvet 🌳</h2>
-        <img src="moon.jpg" alt="Moon Velvet" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('moon')">
+        <img src="moon.JPG" alt="Moon Velvet" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('moon')">
       </div>
       <!-- Produit 3: Colombienne -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
