--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Produit 2: Olivette Frozen -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
         <h2 class="text-xl font-semibold mt-4">🫒Olivette Frozen🧊90U⚡️</h2>
-        <img src="olivette_frozen.jpg" alt="Olivette Frozen" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('olivette_frozen')">
+        <img src="olivette_frozen.JPG" alt="Olivette Frozen" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('olivette_frozen')">
       </div>
       <!-- Produit 3: Colombienne -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
