--- a/index.html
+++ b/index.html
@@ -5,8 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dry.Coffee76</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Custom keyframes for spinning animation */
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    .animate-spin {
+      animation: spin 2s linear infinite; /* Spin indefinitely over 2 seconds */
+    }
+    /* Ensure loading screen is full-screen and centered */
+    #loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(17, 24, 39, 0.95); /* Semi-transparent dark background */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      transition: opacity 0.5s ease, visibility 0.5s ease;
+    }
+    #loading-screen.hidden {
+      opacity: 0;
+      visibility: hidden;
+    }
+  </style>
 </head>
 <body class="bg-gray-900 text-white min-h-screen">
+  <!-- Loading Screen -->
+  <div id="loading-screen">
+    <img src="chaton.jpg" alt="Loading Logo" class="h-24 w-24 animate-spin">
+    <p class="text-white text-lg mt-4">Chargement...</p>
+  </div>
+
   <header class="bg-gray-800 p-4">
     <div class="flex items-center justify-center">
       <img src="chaton.jpg" alt="Logo Chaton" class="h-12 w-12 mr-2">
@@ -120,6 +155,14 @@
   </footer>
 
   <script>
+    // Hide loading screen when the page is fully loaded
+    window.onload = function() {
+      const loadingScreen = document.getElementById('loading-screen');
+      setTimeout(() => {
+        loadingScreen.classList.add('hidden');
+      }, 500); // Optional delay for smoother transition (500ms)
+    };
+
     // Fonction pour afficher la section de description correspondant au produit et masquer les autres sections
     function showDescription(product) {
       document.getElementById('products').classList.add('hidden');
