--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
   <main class="container mx-auto p-6">
     <!-- Section des produits -->
     <section id="products" class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <!-- Produit 1: Olivette -->
+      <!-- Produit 1: Moon Velvet -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
-        <h2 class="text-xl font-semibold mt-4">🫒 Olivette Dry90U ⚡️</h2>
-        <img src="olive.jpg" alt="Olivette" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('olivette')">
+        <h2 class="text-xl font-semibold mt-4">🫒 Moon Velvet ⚡️</h2>
+        <img src="olive.jpg" alt="Moon Velvet" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('olivette')">
       </div>
       <!-- Produit 2: Olivette Frozen -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
@@ -77,10 +77,10 @@
       </div>
     </section>
 
-    <!-- Section de description pour Olivette (cachée par défaut) -->
+    <!-- Section de description pour Moon Velvet (cachée par défaut) -->
     <section id="description-olivette" class="hidden bg-gray-800 rounded-lg p-4 shadow-lg">
-      <h2 class="text-xl font-semibold mt-4">🫒 Olivette Dry90U ⚡️</h2>
-      <video class="w-full h-48 object-cover rounded-md" src="olive.mp4" poster="olive.jpg" alt="Olivette" controls></video>
+      <h2 class="text-xl font-semibold mt-4">🫒 Moon Velvet ⚡️</h2>
+      <video class="w-full h-48 object-cover rounded-md" src="olive.mp4" poster="olive.jpg" alt="Moon Velvet" controls></video>
       <p class="text-gray-400 mt-2">
         🫒 5G = 50€<br>
         🫒 10G = 90€<br>
