--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- Produit 1: Moon Velvet -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
         <h2 class="text-xl font-semibold mt-4">🫒 Moon Velvet ⚡️</h2>
-        <img src="olive.jpg" alt="Moon Velvet" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('olivette')">
+        <img src="moon.jpg" alt="Moon Velvet" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('olivette')">
       </div>
       <!-- Produit 2: Olivette Frozen -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
@@ -80,7 +80,7 @@
     <!-- Section de description pour Moon Velvet (cachée par défaut) -->
     <section id="description-olivette" class="hidden bg-gray-800 rounded-lg p-4 shadow-lg">
       <h2 class="text-xl font-semibold mt-4">🫒 Moon Velvet ⚡️</h2>
-      <video class="w-full h-48 object-cover rounded-md" src="olive.mp4" poster="olive.jpg" alt="Moon Velvet" controls></video>
+      <video class="w-full h-48 object-cover rounded-md" src="moonvelvet.MOV" poster="moon.jpg" alt="Moon Velvet" controls></video>
       <p class="text-gray-400 mt-2">
         🫒 5G = 50€<br>
         🫒 10G = 90€<br>
