--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="products" class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <!-- Produit 1: Moon Velvet -->
       <div class="bg-gray-800 rounded-lg p-4 shadow-lg">
-        <h2 class="text-xl font-semibold mt-4">🫒 Moon Velvet ⚡️</h2>
+        <h2 class="text-xl font-semibold mt-4">🌳 Moon Velvet 🌳</h2>
         <img src="Moon.JPG" alt="Moon Velvet" class="w-full h-48 object-cover rounded-md cursor-pointer" onclick="showDescription('olivette')">
       </div>
       <!-- Produit 2: Olivette Frozen -->
@@ -82,12 +82,14 @@
       <h2 class="text-xl font-semibold mt-4">🌳 Moon Velvet 🌳</h2>
       <video class="w-full h-48 object-cover rounded-md" src="moonvelvet.MOV" poster="Moon.JPG" alt="Moon Velvet" controls></video>
       <p class="text-gray-400 mt-2">
-        🌳 5G = 50€<br>
-        🌳 10G = 80€<br>
-        🌳 20G = 160€<br>
-        🌳 25G = 190€<br>
+        🏆Top Shelf🏆<br>
         <br>
-        👎 Pas beaucoup de stock 🛍️, dépêchez-vous les frérots 😉
+        🌳5G=50€<br>
+        🌳10G=80€<br>
+        🌳25G=190€<br>
+        <br>
+        👎Pas beaucoup de stock🛍️, <br>
+        dépêcher vous les frérots 😉
       </p>
       <a href="https://dym168.org/dry_coffee76" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
       <button onclick="showProducts()" class="mt-4 w-full bg-gray-600 hover:bg-gray-700 text-white py-2 rounded-md">Retour</button>
